[package]
authors = ["Vin Singh Ghataore <theshampoofactory@gmail.com>"]
description = """
Auto-vectorization snippets
"""
edition = "2021"
homepage = "https://github.com/shampoofactory/autovec"
license = "MIT OR Apache-2.0"
name = "autovec"
repository = "https://github.com/shampoofactory/autovec"
version = "0.1.0"

[dependencies]
